Fix mobile number overflowing.

--- a/css/subpage.css
+++ b/css/subpage.css
@@ -145,11 +145,7 @@
     #header > a div:nth-of-type(2) {
         display: none;
     }
-    
-    #footer p {
-        display: block;
-    }
-    
+
     #footer .socials {
         margin-left: 0px;
         line-height: normal;
